# docker-workshop

./: app.py  pyproject.toml
